      to, or -1 if the party is full. [James]
    * "set slice edge x", "set slice edge y" [James]
    * "get slice lookup", "set slice lookup" [James]
    * "trace value" [Ralph]
    * "abs", "sign", "sqrt" [Ralph]
    * "map cure" replaces deprecated "outside battle cure" [James]
    * "read attack name" replaces deprecated "get attack name" [James]

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * Test suite and benchmarks for RELOAD format [Mike]

May ? 2010 [Ypsiliform+3]

  * Bugfixes
    * Bug 816: Freeze on attack instead-chaining on multi-stage chains
    * The "leader" command has never worked.
    * "set dead heroes gain experience" did nothing.
    * Bug 829: Shrinking a map could cause garbage map layers to appear;
      also, deleting map layers did not work

Feb 8 2010 [Ypsiliform+2]

  * Bugfixes
    * Bug 815: Trailblazers Frozen
    * Fix crash when saving an empty menu

Jan 24 2010 [Ypsiliform+1]

  * Bugfixes
    * Bug 802: tileset confusion when adding a layer
    * Bug 812: crash after adding a new spriteset while in
      full-set mode
    * Bug 813: crash and map corruption when linking doors to a
      map with more than 3 layers
    * Bug 814: F12 for screenshots not working for SDL backend
    * No longer prevents importing WAV files over 500k in size
      (they often become smaller than 500k when converted to ogg)
    * Fix missing "Quit Editing" on main menu
    * Fix palette browser to update added palettes and to not
      crash the sprite editor.

Jan 08 2010 [Ypsiliform]

  * New Features
    * Press F1 anywhere in custom for help [James, Ralph, Msw, NN]
    * Plotscripting can now load sprites, and place them on screen.
      [Mike, James]
    * Limit on maximum items has been raised from 254 to 32000 [James]
    * Limit on how many item slots you have in your inventory has been
      raised from 198 to 600. You can also manually choose a smaller
      maximum. [James]